Header del post

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="http://fonts.cdnfonts.com/css/billabong" rel="stylesheet">
 </head>
 <body>
+    <!-- -------- Instagram header ------- -->
     <div class="header">
         <div class="container">
             <div><i class='bx bx-camera'></i></div>
@@ -19,6 +20,7 @@
         </div>
     </div>
 
+    <!-- -------Instagram histories-------- -->
     <div class="histories">
         <div class="container">
             <div class="users" >
@@ -41,6 +43,31 @@
                 <div class="img-container"><img src="https://source.unsplash.com/category/nature/" alt="profile"></div>
                 <p>Profile 5</p>
             </div>
+        </div>
+    </div>
+
+    <!-- -------Instagram post------ -->
+
+    <div class="container-post">
+        <!-- Header post -->
+        <div class="header-post">
+            <div class="sub-header-post">
+                <div class="img-profile">
+                    <img src="https://source.unsplash.com/category/nature/" alt="profile">
+                </div>
+                <div class="username">
+                    <p>username1</p>
+                </div>
+            </div>
+            <span class="options"><img src="/semana5/Instagram/assets/img/more-three-dots-button-svgrepo-com.svg" alt="options"></span>
+        </div>
+
+        <!-- Image post -->
+
+        <div class="img-container-post">
+            
+            <img src="https://source.unsplash.com/category/soccer/" alt="profile">
+            
         </div>
     </div>
 
