--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Insta -clon</title>
-    <link rel="shortcut icon" href="/semana5/Instagram/assets/img/instagram.png" type="image/x-icon">
-    <link rel="stylesheet" href="/semana5/Instagram/assets/css/style.css">
+    <link rel="shortcut icon" href="assets/img/instagram.png" type="image/x-icon">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link href="http://fonts.cdnfonts.com/css/billabong" rel="stylesheet">
 </head>
